added booking page by copying html

--- a/style/style.css
+++ b/style/style.css
@@ -20,12 +20,12 @@ button {
     color: #01112f;
     border-radius: 24px;
     margin-top: 300px; 
-    font-size: 2.5vw
+    font-size: 2.5vw;
 }
 
 .one {
     background-color: #3fc114;
-    margin-left: 250px;
+    margin-left: 290px;
 }
 
 
