--- a/style/style2.css
+++ b/style/style2.css
@@ -164,6 +164,22 @@ h2{font-size:13px;}
 .agileinfodeparture-lable span.colon,.agileinforeturn-lable span.colon,.aitspickupaddress-lable span.colon,.aitsdestinationaddress-lable span.colon{margin-right:10px;}
 }
 }
+
+.return {
+    margin: 20px;
+}
+
+button {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 10px 10px;
+    color: #01112f;
+    border-radius: 12px;
+    font-size: 1vw;
+    background-color: #3fc114;
+    margin-top: 50px;
+}
+
+
 /*! CSS Used fontfaces */
 @font-face{font-family:'Montserrat';font-style:normal;font-weight:400;src:local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v12/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');unicode-range:U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;}
 @font-face{font-family:'Montserrat';font-style:normal;font-weight:400;src:local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v12/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');unicode-range:U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;}
